busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-sleep
  namespace: presentation
  labels:
    app: busybox
    function: test
spec:
  containers:
  - name: busybox
    image: busybox
    args:
    - sleep
    - "1000000"
