nginx-deployment-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: presentation
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
          - name: indexmount
            mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
      volumes:
        - name: indexmount
          configMap:
            name: nginx-index
